# pathforge

./: .gitattributes  .gitignore  SECURITY.md  package.json  pnpm-lock.yaml  railway.toml
apps/api/: .env.example  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0a1b2c3d4e5f_add_career_dna_profile_context_columns.py  0a1b2c3d4e5g_create_career_action_planner_tables.py  0b1c2d3e4f5g_create_career_orchestration_tables.py  0c2d3e4f5g6h_create_delivery_layer_tables.py  120561739a8a_initial_schema.py  1a2b3c4d5e6f_add_transition_pathways_tables.py  2a3b4c5d6e7f_add_job_fingerprint_and_external_id.py  2b3c4d5e6f7g_add_career_simulation_tables.py  3b4c5d6e7f8g_add_application_and_cv_version.py  3c4d5e6f7g8h_add_interview_intelligence_tables.py  4c5d6e7f8g9h_add_analytics_tables.py  4d5e6f7g8h9i_add_hidden_job_market_tables.py  5e6f7g8h9i0j_add_career_passport_tables.py  6f7g8h9i0j1k_create_collective_intelligence_tables.py  7g8h9i0j1k2l_create_predictive_career_tables.py  8g9h0i1j2k3l_add_skill_decay_tables.py  8h9i0j1k2l3m_create_ai_transparency_table.py  9i0j1k2l3m4n_add_push_token_infrastructure.py  9j0k1l2m3n4o_add_salary_intelligence_tables.py  a1b2c3d4e5f6_add_push_rate_tracking_columns.py  ab12cd34ef56_add_subscription_trial_end.py  b2c3d4e5f6g7_sprint_34_monetization_growth.py  c3d4e5f6g7h8_sprint_36_target_role_activity_log.py  d4e5f6g7h8i9_sprint_39_auth_hardening.py  e5f6g7h8i9j0_sprint_41_password_reset_token_separation.py  f6g7h8i9j0k1_sprint_58_webhook_event_dlq.py
apps/api/app/: cli.py  main.py  worker.py
apps/api/app/ai/: career_action_planner_analyzer.py  career_action_planner_prompts.py  career_dna_analyzer.py  career_passport_analyzer.py  career_passport_prompts.py  career_simulation_analyzer.py  career_simulation_prompts.py  collective_intelligence_analyzer.py  collective_intelligence_prompts.py  embeddings.py  hidden_job_market_analyzer.py  hidden_job_market_prompts.py  interview_intelligence_analyzer.py  interview_intelligence_prompts.py  predictive_career_analyzer.py  predictive_career_prompts.py  salary_intelligence_analyzer.py  salary_intelligence_prompts.py  skill_decay_analyzer.py  skill_decay_prompts.py  transition_pathways_analyzer.py  transition_pathways_prompts.py
apps/api/app/api/v1/: admin.py  admin_webhooks.py  ai.py  ai_transparency.py  ai_usage.py  analytics.py  applications.py  auth.py  billing.py  blacklist.py  career_action_planner.py  career_command_center.py  career_dna.py  (+23 more)
apps/api/app/core/: auth.py  circuit_breaker.py  config.py  csrf.py  database.py  db_ssl.py  error_handlers.py  errors.py  feature_flags.py  feature_gate.py  intelligence_cache.py  llm.py  llm_observability.py  logging_config.py  middleware.py  password_policy.py  pii_redactor.py  query_budget.py  query_recorder.py  rate_limit.py  redis_ssl.py  security.py  sentry.py  sentry_auto_rollback.py  sessions.py  sso_session_revoke.py  token_blacklist.py  turnstile.py
apps/api/app/models/: __init__.py  admin.py  ai_transparency.py  career_action_planner.py  career_command_center.py  career_dna.py  career_passport.py  career_simulation.py  collective_intelligence.py  hidden_job_market.py  interview_intelligence.py  matching.py  notification.py  predictive_career.py  public_profile.py  push_token.py  recommendation_intelligence.py  resume.py  salary_intelligence.py  skill_decay.py  subscription.py  transition_pathways.py  user.py  user_activity.py  user_profile.py  waitlist.py  webhook_event.py  workflow_automation.py
apps/api/app/schemas/: admin.py  ai_transparency.py  ai_usage.py  career_action_planner.py  career_command_center.py  career_passport.py  career_simulation.py  collective_intelligence.py  hidden_job_market.py  interview_intelligence.py  notification.py  predictive_career.py  public_profile.py  push_token.py  recommendation_intelligence.py  salary_intelligence.py  skill_decay.py  subscription.py  transition_pathways.py  user.py  user_profile.py  waitlist.py  workflow_automation.py
apps/api/app/services/: __init__.py  _career_action_planner_helpers.py  account_deletion_service.py  admin_service.py  ai_usage_service.py  billing_service.py  career_action_planner_service.py  career_command_center_service.py  career_dna_service.py  career_passport_service.py  career_simulation_service.py  collective_intelligence_service.py  document_parser.py  email_service.py  hidden_job_market_service.py  interview_intelligence_service.py  notification_service.py  ocr_service.py  predictive_career_service.py  public_profile_service.py  push_service.py  recommendation_intelligence_service.py  salary_intelligence_service.py  skill_decay_service.py  transition_pathways_service.py  user_profile_service.py  user_service.py  user_service_errors.py  waitlist_service.py  webhook_replay_service.py  workflow_automation_service.py
apps/api/scripts/: __init__.py  purge_causality_data.py
apps/api/tests/: conftest.py  test_account_deletion.py  test_account_deletion_extended.py  test_admin.py  test_admin_routes_extended.py  test_admin_service.py  test_admin_webhooks_route.py  test_ai_embeddings.py  test_ai_services.py  test_ai_transparency_api.py  test_ai_transparency_integration.py  test_ai_usage_route.py  test_ai_usage_service.py  test_alembic_ssl_wiring.py  test_analytics_service.py  test_application_service.py  test_auth_cookie_path.py  test_auth_flows.py  test_auth_integration.py  test_auth_routes.py  test_auth_routes_extra.py  test_billing.py  test_billing_integration.py  test_billing_service_extended.py  test_career_action_planner.py  test_career_action_planner_analyzer.py  test_career_action_planner_helpers.py  test_career_action_planner_llm.py  test_career_action_planner_service.py  test_career_action_planner_service_extended.py  test_career_command_center.py  test_career_command_center_service.py  test_career_dna_analyzer.py  test_career_dna_service.py  test_career_dna_transparency.py  test_career_passport.py  test_career_passport_analyzer.py  test_career_passport_service.py  test_career_passport_service_extended.py  test_career_passport_service_extra.py  (+109 more)
(+439 files in other folders)
