[project]
name = "pathforge-api"
version = "0.1.0"
description = "PathForge API — Career Intelligence Platform Backend"
requires-python = ">=3.12"
license = "LicenseRef-Proprietary"
authors = [{ name = "PathForge", email = "hello@pathforge.eu" }]

dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "PyJWT[crypto]>=2.10.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.18",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "pgvector>=0.3.6",
    "slowapi>=0.1.9",
    "structlog>=24.4.0",
    "arq>=0.26.0",
    "bcrypt>=4.2.0",
    # Sprint 30: Error tracking
    "sentry-sdk[fastapi]>=2.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "mypy>=1.14.0",
    "ruff>=0.8.0",
    "aiosqlite>=0.21.0",
]
ai = [
    "litellm>=1.55.0",
    "langfuse>=2.50.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "voyageai>=0.3.0",
    # Sprint 29: Document parsing
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "filetype>=1.2.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function call in default argument — FastAPI Depends()
    "F821",   # undefined name — SQLAlchemy string forward refs
    "RUF002", # ambiguous unicode in docstring — intentional (™, →)
    "RUF003", # ambiguous unicode in comment — intentional (×)
    "E402",   # module-level import not at top — conftest.py design
    "N818",   # exception Error suffix — our naming convention
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
